--- a/style/regalestyle.css
+++ b/style/regalestyle.css
@@ -82,7 +82,7 @@ div {
     z-index: 5;
     top: 50%;
     left: 6%;
-    width: 10%;
+    width: 8%;
     height: 60%;
     color: #ffffff;
     background-color: #6c5ce7;
@@ -97,8 +97,8 @@ div {
 
 #mainmenuebild {
     top: 50%;
-    left: 16%;
-    width: 24%;
+    left: 19%;
+    width: 32%;
     height: 100%;
     background-size: 70%;
     background-position: center;
@@ -212,14 +212,16 @@ div {
 
 
 #fachansichtalleleds {
-    left: 74%;
-    width: 8%;
+    top: 10%;
+    left: 13%;
+    width: 22%;
     background-color: #2ed573;
 }
 
 #fachansichtalleledsaus {
-    left: 84%;
-    width: 8%;
+    top: 22%;
+    left: 13%;
+    width: 22%;
     background-color: #ff4757;
 }
 
@@ -434,13 +436,19 @@ td {
 
 
 #fachansicht {
-    width: 90%;
-    height: 80%;
+    width: 100%;
+    height: 90%;
     top: 55%;
     left: 50%;
 }
 
 #fachansichttabelle {
+    border: 8px solid #000000;
+    border-radius: 4px;
+}
+
+#sonderfachansichttabelle {
+    width: 90%;
     border: 8px solid #000000;
     border-radius: 4px;
 }
