--- a/style/loginstyle.css
+++ b/style/loginstyle.css
@@ -23,6 +23,19 @@ div, button, input {
     font-weight: 500;
 }
 
+button:after {
+    content: "";
+    background: #90EE90;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+
 #login {
     background:-webkit-linear-gradient(50deg, #282828 30%, #583046, #A44C53, #C45658);
     background:-moz-linear-gradient(50deg, #282828 30%, #583046, #A44C53, #C45658);
