--- a/style/loginstyle.css
+++ b/style/loginstyle.css
@@ -23,7 +23,7 @@ div, button, input {
     font-weight: 500;
 }
 
-button:after {
+.clickeffect:after {
     content: "";
     background: #90EE90;
     display: block;
