--- a/style/loginstyle.css
+++ b/style/loginstyle.css
@@ -25,14 +25,14 @@ div, button, input {
 
 .clickeffect:after {
     content: "";
-    background: #90EE90;
+    background: #ffffff;
     display: block;
     position: absolute;
     padding-top: 300%;
     padding-left: 350%;
     margin-left: -20px!important;
     margin-top: -120%;
-    opacity: 0;
+    opacity: 0.4%;
     transition: all 0.8s
 }
 
