--- a/style/loginstyle.css
+++ b/style/loginstyle.css
@@ -23,6 +23,13 @@ div, button, input {
     font-weight: 500;
 }
 
+.clickeffect:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
+}
+
 .clickeffect:after {
     content: "";
     background: #ffffff;
