--- a/style/loginstyle.css
+++ b/style/loginstyle.css
@@ -23,6 +23,13 @@ div, button, input {
     font-weight: 500;
 }
 
+.clickeffect {
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+}
+
 .clickeffect:active:after {
     padding: 0;
     margin: 0;
