--- a/style/loginstyle.css
+++ b/style/loginstyle.css
@@ -22,32 +22,8 @@ div, button, input {
     font-family: 'Quicksand', sans-serif;
     font-weight: 500;
 }
-
-.clickeffect {
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-}
-
-.clickeffect:active:after {
-    padding: 0;
-    margin: 0;
-    opacity: 1;
-    transition: 0s
-}
-
-.clickeffect:after {
-    content: "";
-    background: #ffffff;
-    display: block;
-    position: absolute;
-    padding-top: 300%;
-    padding-left: 350%;
-    margin-left: -20px!important;
-    margin-top: -120%;
-    opacity: 0.4%;
-    transition: all 0.8s
+button:active {
+    background: linear-gradient(50deg, #df3e47, #CC5255);
 }
 
 #login {
@@ -145,16 +121,16 @@ div, button, input {
 }
 
 #anmelden {
-    top: 60%;
+    top: 64%;
     left: 50%;
-    width: 20%;
-    height: 10%;
+    width: 26%;
+    height: 14%;
     color: #ffffff;
     border: 1px solid #ffffff;
     border-radius: 4px;
     background-color: transparent;
-    box-shadow:0 1px 0 rgba(255, 255, 255, .5) inset, 0 -1px 0 rgba(255, 255, 255, .1) inset, 0 4px 0 #AD4257, 0 4px 2px rgba(0, 0, 0, .5);
-
+    box-shadow:6px 6px 12px rgba(73 ,54, 73, 0.3) inset;
+    font-size: 110%;
 }
 
 .rand{
