--- a/style/loginstyle.css
+++ b/style/loginstyle.css
@@ -24,6 +24,7 @@ div, button, input {
 }
 button:active {
     background: linear-gradient(50deg, #df3e47, #CC5255);
+    box-shadow:6px 6px 12px rgba(73 ,54, 73, 0.3);
 }
 
 #login {
@@ -129,7 +130,6 @@ button:active {
     border: 1px solid #ffffff;
     border-radius: 4px;
     background-color: transparent;
-    box-shadow:6px 6px 12px rgba(73 ,54, 73, 0.3) inset;
     font-size: 110%;
 }
 
