--- a/style/loginstyle.css
+++ b/style/loginstyle.css
@@ -78,7 +78,8 @@ button:active {
     -moz-border-radius-topleft: 40px;
     background-repeat: no-repeat;
     border: 0;
-    background-size: 100%;
+    background-size: 90%;
+    background-position: center;
     background-image: url("../images/background.png");
 }
 
