--- a/style/regalestyle.css
+++ b/style/regalestyle.css
@@ -623,51 +623,51 @@ div {
     -ms-transform: translate(-50%, -50%);
 }
 
-#sled020, #sled120 {
+#sled010, #sled110 {
     left: 4.16%;
 }
 
-#sled021, #sled121 {
+#sled011, #sled111 {
     left: 12.49%;
 }
 
-#sled022, #sled122 {
+#sled012, #sled112 {
     left: 20.83%;
 }
 
-#sled023, #sled123 {
+#sled013, #sled113 {
     left: 29.16%;
 }
 
-#sled024, #sled124 {
+#sled014, #sled114 {
     left: 37.49%;
 }
 
-#sled025, #sled125 {
+#sled015, #sled115 {
     left: 45.82%;
 }
 
-#sled026, #sled126 {
+#sled016, #sled116 {
     left: 54.15%;
 }
 
-#sled027, #sled127 {
+#sled017, #sled117 {
     left: 62.48%;
 }
 
-#sled028, #sled128 {
+#sled018, #sled118 {
     left: 70.81%;
 }
 
-#sled029, #sled129 {
+#sled019, #sled119 {
     left: 79.14%;
 }
 
-#sled0210, #sled1210 {
+#sled01A, #sled11A {
     left: 87.47%;
 }
 
-#sled0211, #sled1211 {
+#sled01B, #sled11B {
     left: 95.80%;
 }
 
